# unsquashfs-wrapper

./: CHANGELOG.md  Cargo.toml  README.md
examples/: a.rs
src/: lib.rs
testdata/: test_extract.squashfs
