[package]
name = "unsquashfs-wrapper"
version = "0.1.1"
authors = ["Jeremy Soller <jackpot51@gmail.com>", "Michael Aaron Murphy <mmstickman@gmail.com>", "eatradish <sakiiily@aosc.io>"]
description = "Extract a squashfs image with progress callback support"
repository = "https://github.com/AOSC-Dev/distinst-squashfs"
readme = "README.md"
license = "MIT"
keywords = ["squashfs"]
edition = "2021"

[dependencies]
libc = "0.2.68"
log = "0.4.8"
which = "4.4.0"
