[package]
name = "unsquashfs-wrapper"
version = "0.2.1"
authors = ["Jeremy Soller <jackpot51@gmail.com>", "Michael Aaron Murphy <mmstickman@gmail.com>", "eatradish <sakiiily@aosc.io>"]
description = "Extract a squashfs image with progress callback support"
repository = "https://github.com/AOSC-Dev/distinst-squashfs"
readme = "README.md"
license = "MIT"
keywords = ["squashfs"]
edition = "2021"

[dependencies]
libc = "0.2.68"
which = "7.0"
rustix = { version = "0.38", features = ["process"] }
tracing = "0.1"
